ArithmeticGrammar.g4
grammar ArithmeticGrammar;
// lexer
//prog: block EOF 
prog: line (NL line)* EOF
    ;
line: expr*
    ;
expr: left=expr op=('*'|'/') right=expr        # InfixExpr
    | left=expr op=('+'|'-') right=expr        # InfixExpr
    | atom=INT                                 # NumberExpr
    | '(' expr ')'                             # ParenExpr 
    | atom=HELLO                               # HelloExpr
    | atom=BYE                                 # ByeExpr
    ;
// parser
HELLO: ('hello'|'hi')  ;
BYE  : ('bye'| 'tata') ;
INT  : [0-9]+         ;
WS   : [ \t]+ -> skip ;
NL   : '\r'? '\n';
